# piper-mou

./: .gitignore  README.md  accum_delta.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/moveit_mujoco_interface/lib/moveit_mujoco_interface/: moveit_mujoco_interface
install/moveit_mujoco_interface/share/moveit_mujoco_interface/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/piper/share/piper/: package.sh
install/piper_description/share/piper_description/: local_setup.sh  package.sh
install/piper_gazebo/share/piper_gazebo/: package.sh
install/piper_humble/share/piper_humble/: local_setup.sh  package.sh
install/piper_msgs/share/piper_msgs/: local_setup.sh  (+1 more)
log/: latest_build
moveit_mujoco_interface/src/: moveit_controller.cpp
piper_ros/: .gitignore  README.md
piper_ros/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
rosbag2_2025_09_03-16_34_15/: metadata.yaml
rosbag2_2025_09_03-17_39_12/: metadata.yaml
rosbag2_2025_09_03-17_40_53/: metadata.yaml
src/moveit_mujoco_interface/: CMakeLists.txt  Notice.md
src/piper_ros/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/piper_ros/log/: latest_build
src/piper_ros/src/piper_moveit/piper_with_gripper_moveit/: CMakeLists.txt
src/piper_ros/src/piper_moveit/piper_with_gripper_moveit/config/: ompl_plainning.yaml  pilz_industrial_motion_planner_planning.yaml  piper.srdf  piper.urdf.xacro
src/piper_ros/src/piper_moveit/piper_with_gripper_moveit/src/: Logic_inte_ba.py  Logic_inte_wm copy.py  Logic_inte_wm.py  effort.py  joint_goal.cpp  joint_wiggler.py  node2.py  planning_scene.cpp  pose_goal.cpp  scaler_kmeansf.pkl  simple_jacobian.py  target_pose_server.py
src/piper_ros/src/piper_moveit/piper_with_gripper_moveit/src/gd/: DepthCamera_2025-08-01-10-35-49.json  DepthCamera_2025-08-04-17-43-23.json  readme.md  run_basket_adaptive.py  run_laundry_detec_synthe_cyl2.py  run_laundry_detector.py  run_washer_dynamic_cyl.py  test_1frame.py
src/piper_ros/src/piper_moveit/piper_with_gripper_moveit/src/gd/detector/: get_dynamic_cylinder_mask.py  utils.py  zscore_detector copy.py
src/piper_ros/src/piper_moveit/piper_with_gripper_moveit/src/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
src/xela_sensor/: enable.py
topic_based_ros2_control/: CMakeLists.txt
(+141 files in other folders)
